--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 #titulo{
-  font-family: "Sofia", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 46px;
   text-align: center;
 }
@@ -28,3 +32,22 @@ body {
   height: 600px;
   height: 600px;
 }
+
+#menu-h{
+  list-style-type: none;
+  padding: 0;
+  background-color: #5479f3;
+  font-family: 'Poppins', sans-serif;
+}
+
+#menu-h li{
+  display: inline-block;
+}
+
+#menu-h li a{
+  color: #fff;
+  padding: 20px;
+  display: inline;
+  text-decoration: none;
+}
+
