--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 }
 
 #texto{
-  font-family: Merriweather, serif;
-  font-size: 22px;  
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;  
 }
 
 #imagem_redonda {
@@ -35,9 +35,10 @@ body {
 
 #menu-h{
   list-style-type: none;
-  padding: 0;
+  padding: 10px;
   background-color: #5479f3;
   font-family: 'Poppins', sans-serif;
+  text-align: center;
 }
 
 #menu-h li{
@@ -51,3 +52,23 @@ body {
   text-decoration: none;
 }
 
+
+
+.circle-icons {
+  padding: 10px; /* espaçamento */
+  font-size: 22px; /* tamanho do icone */
+  width: 18px; /* tamanho do fundo */
+  text-align: center;
+  text-decoration: none;
+  margin: 10px; /* espaçamento entre eles */
+  border-radius: 50%;  
+  background: rgb(81, 168, 250); /* cor do fundo */
+  color: #fff; /*cor do icone */
+}
+
+
+.circle-icons:hover {
+    background: #86f7e4; /*  cor de fundo com mouse encima */
+    color: #4b4848;  /* cor do icone com mouse encima */
+    opacity: 0.7;
+}
