--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 
 body {
   margin: 70px;
+  background-color: #00000; 
 }
 
 #centralizar{
@@ -52,13 +53,6 @@ body {
   padding: 20px;
   display: inline;
   text-decoration: none;
-}
-
-body{
-  background-image: url(img/telaFundo.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
 }
 
 
